sombra na header_content

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ body {
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
+.header_content {
+    justify-content: center;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+}
+
 .body_content {
     height: 550px;
     width: 100%;
