--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,30 @@ body {
 
 .header_toolbar {
     padding-left: 10px;
+    text-decoration: none;
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
+
+li a {
+    color: white;
+    font-size: large;
+    text-align: center;
+    padding: 14px 5px;
+    text-decoration: none;
+}
+
+li:hover {
+    background-color: rgb(0, 200, 200);
 }
 
 .header_content {
