--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,7 @@
 .historia-preview {
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    border-style:double;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .title {
