--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,12 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
 }
 
 body {
-    background-color: #DDDDDD;
+    background-color: #FFFFFF;
     overflow-x: hidden;
 }
 
@@ -18,7 +18,6 @@ body {
 
 .header_toolbar {
     text-decoration: none;
-    height: auto;
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -36,13 +35,15 @@ ul {
 
 li {
     display: inline;
+    font-weight: bold;
+    position: relative;
+    font-size: 150%;
 }
 
 li a {
     color: white;
-    font-size: large;
     text-align: center;
-    padding: 14px 5px;
+    padding: 5px;
     text-decoration: none;
 }
 
@@ -66,5 +67,11 @@ li:hover {
 }
 
 article {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    padding: 10px;
     background-color: #FFFFFF;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
