--- a/css/sair.css
+++ b/css/sair.css
@@ -1,7 +1,7 @@
-/*Altera as propriedades de largura e modo de exibição da tabela de cadastro*/
+/*Altera a largura e o modo de exibição da tabela*/
 label {
     display: inline-block;
-    width: 200px;
+    width: 50px;
 }
 
 /*Modifica a margem e a largura dos campos de entrada*/
