--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ article {
     margin-top: 50px;
     padding: 10px;
     background-color: #FFFFFF;
+    border-radius: 10px;
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
