--- a/css/styles.css
+++ b/css/styles.css
@@ -92,3 +92,50 @@ article {
 h1 {
     text-align: center;
 }
+
+.logo {
+    width: px;
+}
+
+/*Modifica o tamanho e o alinhamento do texto*/
+#sobre {
+    font-size: larger;
+    text-align: center;
+}
+
+/*Altera as propriedades de largura e modo de exibição da tabela de cadastro*/
+.tabelacad {
+    display: inline-block;
+    width: 200px;
+}
+
+/*Modifica a margem e a largura dos campos de entrada*/
+.cadentr {
+    width: 250px;
+    margin-bottom: 5px;
+}
+
+/*Modifica a largura e a cor de fundo dos artigos*/
+#inicad {
+    width: fit-content;
+    background-color: white;
+}
+
+/*Modifica a largura e margem superior do botão*/
+#botao {
+    margin-top: 15px;
+    width: 75px;
+}
+
+/*Modifica o tipo da borda, a largura da borda e o preenchimento do div com classe "historia-preview"*/
+.historia-preview {
+    border-style:double;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+/*Altera a largura e o tamanho da fonte*/
+.title {
+    font-size: larger;
+    font-weight: bold;
+}
