--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 /*Altera a cor de fundo e as sombras da classe "header"*/
 .header {
-    background-color: rgb(0, 124, 124);
+    background-color: rgb(163, 235, 235);
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.3), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -49,7 +49,7 @@ li {
 
 /*ALtera as propriedades dos links na lista*/
 li a {
-    color: white;
+    color: black;
     text-align: center;
     padding: 5px;
     text-decoration: none;
@@ -94,13 +94,13 @@ h1 {
 }
 
 .logo {
-    width: px;
+    width: 50px;
 }
 
 /*Modifica o tamanho e o alinhamento do texto*/
 #sobre {
     font-size: larger;
-    text-align: center;
+    text-align: justify;
 }
 
 /*Altera as propriedades de largura e modo de exibição da tabela de cadastro*/
@@ -121,6 +121,14 @@ h1 {
     background-color: white;
 }
 
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  #tabcons {
+    border-collapse: collapse;
+  }
+
 /*Modifica a largura e margem superior do botão*/
 #botao {
     margin-top: 15px;
@@ -138,4 +146,41 @@ h1 {
 .title {
     font-size: larger;
     font-weight: bold;
+}
+
+/*Modifica o tamanho da fonte e a largura dos campos de cabeçalho da tabela*/
+.conscab {
+    font-size: larger;
+    width: 300px;
+}
+
+/*Modifica o tipo da borda e o alinhamento do texto nos campos de conteúdo da tabela*/
+.conscont {
+    font-size: large;
+    text-align: center;
+    padding: 10px;
+}
+
+/*Altera a largura e o modo de exibição da tabela*/
+.extable {
+    display: inline-block;
+    width: 50px;
+}
+
+/*Modifica a margem e a largura dos campos de entrada*/
+.inplog {
+    width: 250px;
+    margin-bottom: 5px;
+}
+
+/*Modifica a largura e a cor de fundo dos artigos*/
+#log {
+    width: fit-content;
+    background-color: white;
+}
+
+/*Modifica a largura e margem superior do botão*/
+#btn {
+    margin-top: 15px;
+    width: 75px;
 }
